// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`HearingSummaryItemComponent should render first defendant name plus 2 others 1`] = `
<test-host-component
  hearing={[Function Object]}
  isActive={[Function Boolean]}
>
  <hearing-summary-item>
    <div
      class="hearing-summary-item"
    >
      <input
        aria-hidden="true"
        data-test-id="hearingId"
        type="hidden"
        value="123"
      />
      <span
        class="hearing-tags govuk-body-s"
        pdk-typography="body-small"
      >
         HEARING_LIST.WELSH 
        <reporting-restrictions>
        </reporting-restrictions>
      </span>
      <div
        class="seq-container"
      >
        <span
          class="sequence-number"
          pdk-label="small"
        >
        </span>
      </div>
      <div
        class="hearing-summary-details"
      >
        <div
          class="type smallerFont govuk-!-margin-bottom-2"
          data-test-id="hearingType"
          pdk-margin-bottom="2"
        >
           description 
        </div>
        <div
          class="details"
        >
          <div
            class="defendant govuk-!-margin-bottom-2"
            data-test-id="defendantNames"
            pdk-margin-bottom="2"
          >
            Isaac Sanya
          </div>
          <div
            class="urn-content smallerFont"
          >
            <div
              class="govuk-!-margin-bottom-1"
              pdk-margin-bottom="1"
            >
              <span
                class="urn"
              >
                COMMON.URN
              </span>
              <span
                data-test-id="reference"
              >
                1234567
              </span>
              <span
                class="govuk-visually-hidden"
                pdk-visually-hidden=""
              >
                Case reference: (
                <span
                  data-test-id="reference"
                >
                </span>
                )
              </span>
            </div>
          </div>
          <div
            class="clearfix"
          />
        </div>
      </div>
    </div>
  </hearing-summary-item>
</test-host-component>
`;

exports[`HearingSummaryItemComponent should render the template with 1 bulk case 1`] = `
<test-host-component
  hearing={[Function Object]}
  isActive={[Function Boolean]}
>
  <hearing-summary-item>
    <div
      class="hearing-summary-item"
    >
      <input
        aria-hidden="true"
        data-test-id="hearingId"
        type="hidden"
        value="123"
      />
      <span
        class="hearing-tags govuk-body-s"
        pdk-typography="body-small"
      >
         HEARING_LIST.WELSH 
        <reporting-restrictions>
        </reporting-restrictions>
      </span>
      <div
        class="seq-container"
      >
        <span
          class="sequence-number"
          pdk-label="small"
        >
        </span>
      </div>
      <div
        class="hearing-summary-details"
      >
        <div
          class="type smallerFont govuk-!-margin-bottom-2"
          data-test-id="hearingType"
          pdk-margin-bottom="2"
        >
           description 
        </div>
        <div
          class="details"
        >
          <div
            class="defendant govuk-!-margin-bottom-2"
            data-test-id="defendantNames"
            pdk-margin-bottom="2"
          >
            1000 Defendants
          </div>
          <div
            class="urn-content smallerFont"
          >
            <div
              class="govuk-!-margin-bottom-1"
              pdk-margin-bottom="1"
            >
              <span
                data-test-id="reference"
              >
                Council tax liability
              </span>
              <span
                class="govuk-visually-hidden"
                pdk-visually-hidden=""
              >
                Case reference: (
                <span
                  data-test-id="reference"
                >
                  Council tax liability
                </span>
                )
              </span>
            </div>
          </div>
          <div
            class="clearfix"
          />
        </div>
      </div>
    </div>
  </hearing-summary-item>
</test-host-component>
`;

exports[`HearingSummaryItemComponent should render the template with the values expected 1`] = `
<test-host-component
  hearing={[Function Object]}
  isActive={[Function Boolean]}
>
  <hearing-summary-item>
    <div
      class="hearing-summary-item"
    >
      <input
        aria-hidden="true"
        data-test-id="hearingId"
        type="hidden"
        value="123"
      />
      <span
        class="hearing-tags govuk-body-s"
        pdk-typography="body-small"
      >
         HEARING_LIST.WELSH 
        <reporting-restrictions>
        </reporting-restrictions>
      </span>
      <div
        class="seq-container"
      >
        <span
          class="sequence-number"
          pdk-label="small"
        >
        </span>
      </div>
      <div
        class="hearing-summary-details"
      >
        <div
          class="type smallerFont govuk-!-margin-bottom-2"
          data-test-id="hearingType"
          pdk-margin-bottom="2"
        >
           description 
        </div>
        <div
          class="details"
        >
          <div
            class="defendant govuk-!-margin-bottom-2"
            data-test-id="defendantNames"
            pdk-margin-bottom="2"
          >
            Isaac Sanya
          </div>
          <div
            class="urn-content smallerFont"
          >
            <div
              class="govuk-!-margin-bottom-1"
              pdk-margin-bottom="1"
            >
              <span
                class="urn"
              >
                COMMON.URN
              </span>
              <span
                data-test-id="reference"
              >
                1234567
              </span>
              <span
                class="govuk-visually-hidden"
                pdk-visually-hidden=""
              >
                Case reference: (
                <span
                  data-test-id="reference"
                >
                </span>
                )
              </span>
            </div>
          </div>
          <div
            class="clearfix"
          />
        </div>
      </div>
    </div>
  </hearing-summary-item>
</test-host-component>
`;

exports[`HearingSummaryItemComponent should render the template with with 1 bulk case and 1 removed defendant 1`] = `
<test-host-component
  hearing={[Function Object]}
  isActive={[Function Boolean]}
>
  <hearing-summary-item>
    <div
      class="hearing-summary-item"
    >
      <input
        aria-hidden="true"
        data-test-id="hearingId"
        type="hidden"
        value="123"
      />
      <span
        class="hearing-tags govuk-body-s"
        pdk-typography="body-small"
      >
         HEARING_LIST.WELSH 
        <reporting-restrictions>
        </reporting-restrictions>
      </span>
      <div
        class="seq-container"
      >
        <span
          class="sequence-number"
          pdk-label="small"
        >
        </span>
      </div>
      <div
        class="hearing-summary-details"
      >
        <div
          class="type smallerFont govuk-!-margin-bottom-2"
          data-test-id="hearingType"
          pdk-margin-bottom="2"
        >
           description 
        </div>
        <div
          class="details"
        >
          <div
            class="defendant govuk-!-margin-bottom-2"
            data-test-id="defendantNames"
            pdk-margin-bottom="2"
          >
            1000 Defendants
          </div>
          <div
            class="urn-content smallerFont"
          >
            <div
              class="govuk-!-margin-bottom-1"
              pdk-margin-bottom="1"
            >
              <span
                data-test-id="reference"
              >
                Council tax liability
              </span>
              <span
                class="govuk-visually-hidden"
                pdk-visually-hidden=""
              >
                Case reference: (
                <span
                  data-test-id="reference"
                >
                  Council tax liability
                </span>
                )
              </span>
            </div>
          </div>
          <div
            class="clearfix"
          />
        </div>
      </div>
    </div>
  </hearing-summary-item>
</test-host-component>
`;
